--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <title> <%= t "global.program_name" %> | <%= @title %></title>
 
   <%= stylesheet_link_tag 'application', 'formtastic', 'formtastic_changes', :cache => "base" %>
-  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'jquery-ui-1.8.2.custom.min.js' %>
+  <%= javascript_include_tag 'application', 'jquery-1.4.2.min.js', 'jquery-ui-1.8.2.custom.min.js' %>
   <script type="text/javascript">
       $(function() {
           // Tabs
