--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
-<h2><%= [t "user.t_title"] %> <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"]), new_user_path) %> </h2>
-
+<h1><%= [t "user.t_title"] %>  </h1>
+<div id="top_float_right">
+  <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"]), new_user_path) %><%= link_to("Add New", new_user_path) %>
+</div>
 
 <% form_tag users_path, :method => 'get' do %>
    <p><%= t "user.search"  %>
@@ -8,7 +10,7 @@
 
    </p>
 <% end %>
- <p>
+  <p>
   <%= will_paginate @user, :class => "digg_pagination" %>
 </p>
 <table id="index_table" >
