--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -5,10 +5,21 @@
 <div id="top_float_right">
   <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
 </div>
+
+    <div id="ddtabs1" class="basictab">
+<ul>
+<li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "products.tab_menu_inventory_name" %>" rel="sc2"><%= t "products.tab_menu_inventory_name" %></a></li>
+<li><a href="#<%= t "products.tab_menu_selling_name" %>" rel="sc3"><%= t "products.tab_menu_selling" %></a></li>
+<li><a href="#<%= t "products.tab_menu_warranty_name"  %>" rel="sc4"><%= t "products.tab_menu_warranty" %></a></li>
+</ul>
+</div>
+
+<DIV class="tabcontainer">
+
+<div id="sc1" class="tabcontent">
 <% semantic_form_for @product do |f| %>
-    <% tabs_for do |tab| %>
-        <% tab.create((t "products.tab_menu_basic_name"), (t "products.tab_menu_basic")) do %>
-            <% f.inputs do %>
+  <% f.inputs do %>
                 <%= f.input :our_sku, :input_html => {:size => 20} %>
                 <%= f.input :description, :hint => (t "products.hint_desc") %>
                 <%= f.input :model %>
@@ -21,8 +32,12 @@
                 <%= f.input :created_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
                 <%= f.input :created_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
             <% end %>
+       <%= f.buttons %>
         <% end %>
-        <% tab.create((t "products.tab_menu_inventory_name"), (t "products.tab_menu_inventory_name")) do %>
+</div>
+
+<div id="sc2" class="tabcontent">
+<% semantic_form_for @product do |f| %>
             <% f.inputs do %>
                 <%= f.input :stocked_product, :hint => (t "products.stocked") %>
                 <%= f.input :stocking_qty, :input_html => {:size => 20} %>
@@ -31,8 +46,12 @@
                 <%= f.input :qty_available, :input_html => {:size => 20} %>
                 <%= f.input :qty_ordered, :input_html => {:size => 20} %>
             <% end %>
+           <%= f.buttons %>
         <% end %>
-        <% tab.create((t "products.tab_menu_selling_name"), (t "products.tab_menu_selling")) do %>
+</div>
+
+<div id="sc3" class="tabcontent">
+<% semantic_form_for @product do |f| %>
             <% f.inputs do %>
                 <%= f.input :taxable %>
                 <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
@@ -40,18 +59,18 @@
                 <%= f.input :disc_amount, :input_html => {:size => 5} %>
                 <%= f.input :disc_percent, :input_html => {:size => 5} %>
             <% end %>
+      <%= f.buttons %>
         <% end %>
-        <% tab.create((t "products.tab_menu_warranty_name"), (t "products.tab_menu_warranty")) do %>
+</div>
+<div id="sc4" class="tabcontent">
+<% semantic_form_for @product do |f| %>
             <% f.inputs do %>
                 <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15} %>
                 <%= f.input :warranty_length, :input_html => {:size => 20} %>
                 <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")] %>
             <% end %>
-        <% end %>
-
-    <% end %>
-    <br>
-    <p>
       <%= f.buttons %>
-    </p>
-<% end %>
+        <% end %>
+</div>
+
+</DIV>
