Updated tabs javascript in other views

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,7 +6,7 @@
   <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
 </div>
 
-    <div id="ddtabs1" class="basictab">
+<div id="ddtabs1" class="basictab">
 <ul>
 <li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
 <li><a href="#<%= t "products.tab_menu_inventory_name" %>" rel="sc2"><%= t "products.tab_menu_inventory_name" %></a></li>
@@ -15,7 +15,7 @@
 </ul>
 </div>
 
-<DIV class="tabcontainer">
+<div class="tabcontainer">
 
 <div id="sc1" class="tabcontent">
 <% semantic_form_for @product do |f| %>
@@ -73,4 +73,4 @@
         <% end %>
 </div>
 
-</DIV>
+</div>
