--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,61 +1,81 @@
 <h1>Editing products</h1>
-<table width="100%">
-  <tr>
-    <td colspan="4" align="right">
-        <%= link_to [t "global.back"], product_path %>
-    </td>
-  </tr>
-  </table>
+
+<div id="top_float_right">
+  <%= link_to(image_tag('close.png', :title => [t "global.close"]), products_path) %>&nbsp;<%= link_to([t "global.close"], products_path) %>
+</div>
+
+<div id="ddtabs1" class="basictab">
+<ul>
+<li><a href="#<%= t "products.tab_menu_basic_name"  %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
+<li><a href="#<%= t "products.tab_menu_inventory_name" %>" rel="sc2"><%= t "products.tab_menu_inventory_name" %></a></li>
+<li><a href="#<%= t "products.tab_menu_selling_name" %>" rel="sc3"><%= t "products.tab_menu_selling" %></a></li>
+<li><a href="#<%= t "products.tab_menu_warranty_name"  %>" rel="sc4"><%= t "products.tab_menu_warranty" %></a></li>
+</ul>
+</div>
+
+<div class="tabcontainer">
+
+<div id="sc1" class="tabcontent">
 <% semantic_form_for @product do |f| %>
-<% tabs_for do |tab| %>
-	<% tab.create('tab_one', 'Basic (required)') do %>
-    <% f.inputs  do %>
-        <%= f.input :active %>
-        <%= f.input :our_sku, :input_html => { :size => 20 } %>
-        <%= f.input :description, :hint => (t "products.hint_desc") %>
-        <%= f.input :model %>
-        <%= f.input :manufacturer %>
-        <%= f.input :product_category %>
-        <%= f.input :supplier, :label_method => :company_name  %>
-        <%= f.input :supplier_sku, :input_html => { :size => 20 } %>
-        <%= f.input :cost_price, :input_html => { :size => 10 } %>
-        <%= f.input :sell_price, :input_html => { :size => 10 } %>
-        <%= f.input :edited_by, :as => :hidden, :input_html => { :value =>  current_user.username } %>
-        <%= f.input :edited_at, :as => :hidden, :input_html => { :value =>  Time.now } %>
+  <% f.inputs do %>
+                <%= f.input :active, :label => (t "global.active")%>
+                <%= f.input :our_sku, :input_html => {:size => 20}, :label => (t "products.our_sku") %>
+                <%= f.input :description, :hint => (t "products.hint_desc"), :label => (t "global.description") %>
+                <%= f.input :model, :label => (t "producst.model") %>
+                <%= f.input :manufacturer, :label => (t "products.manufacturer") %>
+                <%= f.input :product_category, :label => (t "products.category") %>
+                <%= f.input :supplier, :label_method => :company_name, :label => (t "products.supplier") %>
+                <%= f.input :supplier_sku, :input_html => {:size => 20}, :label => (t "products.supplier_sku")%>
+                <%= f.input :cost_price, :input_html => {:size => 10}, :label => (t "products.cost_price") %>
+                <%= f.input :sell_price, :input_html => {:size => 10}, :label => (t "products.sell_price") %>
+                <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+            <% end %>
+       <%= f.buttons %>
         <% end %>
-	<% end %>
-	<% tab.create('tab_two', 'Inventory') do %>
-      <% f.inputs do %>
-            <%= f.input :stocked_product, :hint => "Enable this if stock needs to be in stock" %>
-            <%= f.input :stocking_qty, :input_html => { :size => 20 } %>
-            <%= f.input :qty_on_hand, :input_html => { :size => 20 } %>
-            <%= f.input :qty_allocated, :input_html => { :size => 20 } %>
-            <%= f.input :qty_available, :input_html => { :size => 20 } %>
-            <%= f.input :qty_ordered, :input_html => { :size => 20 } %>
+</div>
+
+<div id="sc2" class="tabcontent">
+<% semantic_form_for @product do |f| %>
+            <% f.inputs do %>
+                <%= f.input :stocked_product, :hint => (t "products.stocked") %>
+                <%= f.input :stocking_qty, :input_html => {:size => 20} %>
+                <%= f.input :qty_on_hand, :input_html => {:size => 20} %>
+                <%= f.input :qty_allocated, :input_html => {:size => 20} %>
+                <%= f.input :qty_available, :input_html => {:size => 20} %>
+                <%= f.input :qty_ordered, :input_html => {:size => 20} %>
+          <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+            <% end %>
+           <%= f.buttons %>
         <% end %>
-   <% end %>
-        <% tab.create('tab_three', 'Selling Information') do %>
-          <% f.inputs  do %>
-        <%= f.input :taxable %>
-        <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
-        <%= f.input :discountable %>
-        <%= f.input :disc_amount, :input_html => { :size => 5 } %>
-        <%= f.input :disc_percent, :input_html => { :size => 5 } %>
-    <% end %>
-        <% end %>
-        <% tab.create('tab_four', 'Warranty Information') do %>
-            <% f.inputs  do %>
-                   <%= f.input :warranty_info, :as => :text, :input_html => {  :rows => 15 }  %>
-                   <%= f.input :warranty_length,  :input_html => { :size => 20 } %>
-                   <%= f.input :warranty_unit, :as => :select, :collection => ["Day(s)", "Month(s)", "Year(s)"] %>
-               <% end %>
+</div>
 
-
-        <% end %>
-
-<% end %><br>
-
+<div id="sc3" class="tabcontent">
+<% semantic_form_for @product do |f| %>
+            <% f.inputs do %>
+                <%= f.input :taxable %>
+                <%= f.input :tax_rate, :hint => (t "products.hint_tax_rate") %>
+                <%= f.input :discountable %>
+                <%= f.input :disc_amount, :input_html => {:size => 5} %>
+                <%= f.input :disc_percent, :input_html => {:size => 5} %>
+          <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+            <% end %>
       <%= f.buttons %>
+        <% end %>
+</div>
+<div id="sc4" class="tabcontent">
+<% semantic_form_for @product do |f| %>
+            <% f.inputs do %>
+                <%= f.input :warranty_info, :as => :text, :input_html => {:rows => 15} %>
+                <%= f.input :warranty_length, :input_html => {:size => 20} %>
+                <%= f.input :warranty_unit, :as => :select, :collection => [(t "global.days"), (t "global.months"), (t "global.years")] %>
+                <%= f.input :edited_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
+                <%= f.input :edited_at, :as => :hidden, :input_html => {:value =>  Time.now} %>
+      <% end %>
+      <%= f.buttons %>
+        <% end %>
+</div>
 
-
-<% end %>
+</div>
